<resources>
    <string name="app_name">iMap</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="map_label">地图</string>
    <string name="func_label">功能</string>
    <string name="me_label">我</string>
    <string name="title_nearby">这是附近页面</string>
    <string name="title_func">这是功能页面</string>
    <string name="title_me">这是我页面</string>
    <string name="me_setting">设置</string>
    <string name="me_money">钱包</string>
    <string name="me_photo">相册</string>
    <string name="me_card">卡包</string>
    <string name="label_first">first fragment</string>
    <string name="label_second">second fragment</string>
    <string name="label_third">third fragment</string>
    <string name="teamName_A">A队</string>
    <string name="teamName_B">B队</string>
    <string name="score">0</string>
    <string name="add_score3">+3 分</string>
    <string name="add_score2">+2 分</string>
    <string name="add_score1">+1 分</string>
    <string name="reset">重置</string>
    <string name="rate_dollar">美元</string>
    <string name="rate_euro">欧元</string>
    <string name="rate_won">韩元</string>
    <string name="rmb_hint">请输入人民币金额</string>
    <string name="btn_config">显示更多……</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
