<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="45dp"
    tools:context=".ThirdFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:id="@+id/activity_rate"
        android:orientation="vertical">

        <EditText
            android:id="@+id/rmb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/rmb_hint"
            android:inputType="numberDecimal"/>

        <TextView
            android:id="@+id/showOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:text="汇率计算"
            android:gravity="center"/>

        <Button
            android:id="@+id/rate_dollar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/rate_dollar"
            android:textSize="20dp" />

        <Button
            android:id="@+id/rate_euro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_dark"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/rate_euro"
            android:textSize="20dp" />

        <Button
            android:id="@+id/rate_won"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/rate_won"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btn_opencfg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@android:color/holo_purple"
            android:text="@string/btn_config"
            android:textSize="20dp" />

    </LinearLayout>

</FrameLayout>