<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/me_lin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MeFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/me_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/background_light"
            android:text="注册" />

        <Button
            android:id="@+id/me_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/me_register"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/background_light"
            android:text="登录" />

        <ImageView
            android:id="@+id/meTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="230dp"
            android:src="@drawable/jing" />
    </RelativeLayout>

    <Button
        android:id="@+id/me_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:gravity="left"
        android:text="@string/me_money"
        android:paddingTop="1dp"
        android:textColor="@android:color/black"
        android:textSize="36dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/darker_gray" />

    <Button
        android:id="@+id/me_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:gravity="left"
        android:text="@string/me_photo"
        android:textColor="@android:color/black"
        android:textSize="36dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/darker_gray" />

    <Button
        android:id="@+id/me_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:gravity="left"
        android:text="@string/me_card"
        android:textColor="@android:color/black"
        android:textSize="36dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/darker_gray" />

    <Button
        android:id="@+id/me_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:gravity="left"
        android:text="@string/me_setting"
        android:textColor="@android:color/black"
        android:textSize="36dp" />

</LinearLayout>